# honeybeepf-llm

./: .dockerignore  .gitignore  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  NOTICE  README.md
.github/: pull_request_template.md
.github/workflows/: benchmark-tests.yml  benchmark.yml  build.yml  docker-publish.yml  kernel-matrix.yml
charts/: README.md
charts/honeybeepf/: values.yaml
charts/honeybeepf-llm/: Chart.yaml  demo-template.yaml  values-local.yaml  values.yaml
charts/honeybeepf-llm-otel-collector/: Chart.yaml  values.yaml
charts/honeybeepf-llm-prometheus/: Chart.yaml
ci/: smoke.sh  ssl-trace.sh
docs/grafana/: README.md  honeybeepf-cost.json  honeybeepf-security.json
honeybeepf-llm/: Cargo.toml  Makefile  example.env
honeybeepf-llm-common/: Cargo.toml
honeybeepf-llm-common/src/: lib.rs
honeybeepf-llm-ebpf/: Cargo.toml
honeybeepf-llm-ebpf/src/probes/: mod.rs
honeybeepf-llm-ebpf/src/probes/builtin/: exec_watch.rs  mod.rs
honeybeepf-llm-ebpf/src/probes/builtin/llm/: helpers.rs  mod.rs
honeybeepf-llm/.cargo/: config.toml
honeybeepf-llm/docs/: BINARY_DEPLOYMENT.md
honeybeepf-llm/honeybeepf-llm/: Cargo.toml  build.rs
honeybeepf-llm/honeybeepf-llm-core/: Cargo.toml
honeybeepf-llm/src/: lib.rs  main.rs  settings.rs  telemetry.rs
tests/: llm_token_meter.py  requirements.txt
tests/benchmark/: Dockerfile.mock  config.py  docker-compose.yml  litellm_config.yaml  load_generator.py  mock_server.py  report.py  requirements.txt  run_benchmark.py  stats.py
(+50 files in other folders)
